language/AgentPP_ANTLR4GrammarParser.java
// Generated from AgentPP_ANTLR4Grammar.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AgentPP_ANTLR4GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, TASK=12, IF=13, ELSE=14, LOOP=15, UNTIL=16, EXECUTE=17, 
		PARALLEL=18, SCHEDULE=19, WAIT=20, READ=21, WRITE=22, TO=23, FROM=24, 
		DELETE=25, MOVE=26, COMPRESS=27, EXTRACT=28, FETCH=29, UPLOAD=30, DOWNLOAD=31, 
		LOG=32, ALERT=33, ANALYZE=34, SUMMARIZE=35, PREDICT=36, TRAIN=37, FILTER=38, 
		TRANSFORM=39, SORT=40, AGGREGATE=41, NOTIFY=42, CURRENT_TIME=43, QUERY_API=44, 
		EMAIL=45, LIST=46, WITH=47, USING=48, WHERE=49, BY=50, AT=51, COLON=52, 
		GT=53, EQUAL=54, PLUS=55, MINUS=56, STAR=57, DIV=58, COMMA=59, LPAREN=60, 
		RPAREN=61, LETTER=62, DIGIT=63;
	public static final int
		RULE_program = 0, RULE_taskDefinition = 1, RULE_block = 2, RULE_statement = 3, 
		RULE_command = 4, RULE_conditional = 5, RULE_loopStmt = 6, RULE_assignment = 7, 
		RULE_execution = 8, RULE_logStmt = 9, RULE_expression = 10, RULE_primaryExpression = 11, 
		RULE_functionCall = 12, RULE_condition = 13, RULE_arguments = 14, RULE_literal = 15, 
		RULE_comparisonOperator = 16, RULE_arithmeticOperator = 17, RULE_identifier = 18, 
		RULE_stringLiteral = 19, RULE_numberLiteral = 20, RULE_booleanLiteral = 21, 
		RULE_filepath = 22, RULE_destination = 23, RULE_directory = 24, RULE_files = 25, 
		RULE_archive = 26, RULE_url = 27, RULE_data = 28, RULE_model = 29, RULE_recipient = 30, 
		RULE_message = 31, RULE_sender = 32, RULE_key = 33, RULE_function = 34, 
		RULE_taskCall = 35, RULE_timerule = 36, RULE_input = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "taskDefinition", "block", "statement", "command", "conditional", 
			"loopStmt", "assignment", "execution", "logStmt", "expression", "primaryExpression", 
			"functionCall", "condition", "arguments", "literal", "comparisonOperator", 
			"arithmeticOperator", "identifier", "stringLiteral", "numberLiteral", 
			"booleanLiteral", "filepath", "destination", "directory", "files", "archive", 
			"url", "data", "model", "recipient", "message", "sender", "key", "function", 
			"taskCall", "timerule", "input"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'=='", "'!='", "'>='", "'<'", "'<='", "'_'", "'\"'", "'\\r'", 
			"'\\n'", "'true'", "'false'", "'task'", "'if'", "'else'", "'loop'", "'until'", 
			"'execute'", "'parallel'", "'schedule'", "'wait'", "'read'", "'write'", 
			"'to'", "'from'", "'delete'", "'move'", "'compress'", "'extract'", "'fetch'", 
			"'upload'", "'download'", "'log'", "'alert'", "'analyze'", "'summarize'", 
			"'predict'", "'train'", "'filter'", "'transform'", "'sort'", "'aggregate'", 
			"'notify'", "'current_time'", "'query_api'", "'email'", "'list'", "'with'", 
			"'using'", "'where'", "'by'", "'at'", "':'", "'>'", "'='", "'+'", "'-'", 
			"'*'", "'/'", "','", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"TASK", "IF", "ELSE", "LOOP", "UNTIL", "EXECUTE", "PARALLEL", "SCHEDULE", 
			"WAIT", "READ", "WRITE", "TO", "FROM", "DELETE", "MOVE", "COMPRESS", 
			"EXTRACT", "FETCH", "UPLOAD", "DOWNLOAD", "LOG", "ALERT", "ANALYZE", 
			"SUMMARIZE", "PREDICT", "TRAIN", "FILTER", "TRANSFORM", "SORT", "AGGREGATE", 
			"NOTIFY", "CURRENT_TIME", "QUERY_API", "EMAIL", "LIST", "WITH", "USING", 
			"WHERE", "BY", "AT", "COLON", "GT", "EQUAL", "PLUS", "MINUS", "STAR", 
			"DIV", "COMMA", "LPAREN", "RPAREN", "LETTER", "DIGIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AgentPP_ANTLR4Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgentPP_ANTLR4GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AgentPP_ANTLR4GrammarParser.EOF, 0); }
		public List<TaskDefinitionContext> taskDefinition() {
			return getRuleContexts(TaskDefinitionContext.class);
		}
		public TaskDefinitionContext taskDefinition(int i) {
			return getRuleContext(TaskDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TASK) {
				{
				{
				setState(76);
				taskDefinition();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TaskDefinitionContext extends ParserRuleContext {
		public TerminalNode TASK() { return getToken(AgentPP_ANTLR4GrammarParser.TASK, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(AgentPP_ANTLR4GrammarParser.COLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TaskDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taskDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterTaskDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitTaskDefinition(this);
		}
	}

	public final TaskDefinitionContext taskDefinition() throws RecognitionException {
		TaskDefinitionContext _localctx = new TaskDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_taskDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(TASK);
			setState(85);
			identifier();
			setState(86);
			match(COLON);
			setState(87);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(89);
					statement();
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public LoopStmtContext loopStmt() {
			return getRuleContext(LoopStmtContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExecutionContext execution() {
			return getRuleContext(ExecutionContext.class,0);
		}
		public LogStmtContext logStmt() {
			return getRuleContext(LogStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				command();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				conditional();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				loopStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
				execution();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				logStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(AgentPP_ANTLR4GrammarParser.READ, 0); }
		public FilepathContext filepath() {
			return getRuleContext(FilepathContext.class,0);
		}
		public TerminalNode WRITE() { return getToken(AgentPP_ANTLR4GrammarParser.WRITE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode TO() { return getToken(AgentPP_ANTLR4GrammarParser.TO, 0); }
		public TerminalNode DELETE() { return getToken(AgentPP_ANTLR4GrammarParser.DELETE, 0); }
		public TerminalNode MOVE() { return getToken(AgentPP_ANTLR4GrammarParser.MOVE, 0); }
		public DestinationContext destination() {
			return getRuleContext(DestinationContext.class,0);
		}
		public TerminalNode COMPRESS() { return getToken(AgentPP_ANTLR4GrammarParser.COMPRESS, 0); }
		public FilesContext files() {
			return getRuleContext(FilesContext.class,0);
		}
		public TerminalNode GT() { return getToken(AgentPP_ANTLR4GrammarParser.GT, 0); }
		public ArchiveContext archive() {
			return getRuleContext(ArchiveContext.class,0);
		}
		public TerminalNode EXTRACT() { return getToken(AgentPP_ANTLR4GrammarParser.EXTRACT, 0); }
		public TerminalNode FETCH() { return getToken(AgentPP_ANTLR4GrammarParser.FETCH, 0); }
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public TerminalNode UPLOAD() { return getToken(AgentPP_ANTLR4GrammarParser.UPLOAD, 0); }
		public TerminalNode DOWNLOAD() { return getToken(AgentPP_ANTLR4GrammarParser.DOWNLOAD, 0); }
		public TerminalNode FROM() { return getToken(AgentPP_ANTLR4GrammarParser.FROM, 0); }
		public TerminalNode LIST() { return getToken(AgentPP_ANTLR4GrammarParser.LIST, 0); }
		public DirectoryContext directory() {
			return getRuleContext(DirectoryContext.class,0);
		}
		public TerminalNode ALERT() { return getToken(AgentPP_ANTLR4GrammarParser.ALERT, 0); }
		public MessageContext message() {
			return getRuleContext(MessageContext.class,0);
		}
		public TerminalNode ANALYZE() { return getToken(AgentPP_ANTLR4GrammarParser.ANALYZE, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TerminalNode WITH() { return getToken(AgentPP_ANTLR4GrammarParser.WITH, 0); }
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public TerminalNode SUMMARIZE() { return getToken(AgentPP_ANTLR4GrammarParser.SUMMARIZE, 0); }
		public TerminalNode PREDICT() { return getToken(AgentPP_ANTLR4GrammarParser.PREDICT, 0); }
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public TerminalNode USING() { return getToken(AgentPP_ANTLR4GrammarParser.USING, 0); }
		public TerminalNode TRAIN() { return getToken(AgentPP_ANTLR4GrammarParser.TRAIN, 0); }
		public TerminalNode FILTER() { return getToken(AgentPP_ANTLR4GrammarParser.FILTER, 0); }
		public TerminalNode WHERE() { return getToken(AgentPP_ANTLR4GrammarParser.WHERE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode TRANSFORM() { return getToken(AgentPP_ANTLR4GrammarParser.TRANSFORM, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode SORT() { return getToken(AgentPP_ANTLR4GrammarParser.SORT, 0); }
		public TerminalNode BY() { return getToken(AgentPP_ANTLR4GrammarParser.BY, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode AGGREGATE() { return getToken(AgentPP_ANTLR4GrammarParser.AGGREGATE, 0); }
		public TerminalNode NOTIFY() { return getToken(AgentPP_ANTLR4GrammarParser.NOTIFY, 0); }
		public RecipientContext recipient() {
			return getRuleContext(RecipientContext.class,0);
		}
		public TerminalNode LOG() { return getToken(AgentPP_ANTLR4GrammarParser.LOG, 0); }
		public TerminalNode CURRENT_TIME() { return getToken(AgentPP_ANTLR4GrammarParser.CURRENT_TIME, 0); }
		public TerminalNode QUERY_API() { return getToken(AgentPP_ANTLR4GrammarParser.QUERY_API, 0); }
		public TerminalNode EMAIL() { return getToken(AgentPP_ANTLR4GrammarParser.EMAIL, 0); }
		public SenderContext sender() {
			return getRuleContext(SenderContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_command);
		try {
			setState(188);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(READ);
				setState(104);
				filepath();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(WRITE);
				setState(106);
				expression();
				setState(107);
				match(TO);
				setState(108);
				filepath();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				match(DELETE);
				setState(111);
				filepath();
				}
				break;
			case MOVE:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				match(MOVE);
				setState(113);
				filepath();
				setState(114);
				match(TO);
				setState(115);
				destination();
				}
				break;
			case COMPRESS:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				match(COMPRESS);
				setState(118);
				files();
				setState(119);
				match(GT);
				setState(120);
				archive();
				}
				break;
			case EXTRACT:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				match(EXTRACT);
				setState(123);
				archive();
				}
				break;
			case FETCH:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				match(FETCH);
				setState(125);
				url();
				}
				break;
			case UPLOAD:
				enterOuterAlt(_localctx, 8);
				{
				setState(126);
				match(UPLOAD);
				setState(127);
				filepath();
				setState(128);
				match(TO);
				setState(129);
				destination();
				}
				break;
			case DOWNLOAD:
				enterOuterAlt(_localctx, 9);
				{
				setState(131);
				match(DOWNLOAD);
				setState(132);
				filepath();
				setState(133);
				match(FROM);
				setState(134);
				url();
				}
				break;
			case LIST:
				enterOuterAlt(_localctx, 10);
				{
				setState(136);
				match(LIST);
				setState(137);
				directory();
				}
				break;
			case ALERT:
				enterOuterAlt(_localctx, 11);
				{
				setState(138);
				match(ALERT);
				setState(139);
				message();
				}
				break;
			case ANALYZE:
				enterOuterAlt(_localctx, 12);
				{
				setState(140);
				match(ANALYZE);
				setState(141);
				data();
				setState(142);
				match(WITH);
				setState(143);
				model();
				}
				break;
			case SUMMARIZE:
				enterOuterAlt(_localctx, 13);
				{
				setState(145);
				match(SUMMARIZE);
				setState(146);
				data();
				}
				break;
			case PREDICT:
				enterOuterAlt(_localctx, 14);
				{
				setState(147);
				match(PREDICT);
				setState(148);
				input();
				setState(149);
				match(USING);
				setState(150);
				model();
				}
				break;
			case TRAIN:
				enterOuterAlt(_localctx, 15);
				{
				setState(152);
				match(TRAIN);
				setState(153);
				model();
				setState(154);
				match(WITH);
				setState(155);
				data();
				}
				break;
			case FILTER:
				enterOuterAlt(_localctx, 16);
				{
				setState(157);
				match(FILTER);
				setState(158);
				data();
				setState(159);
				match(WHERE);
				setState(160);
				condition();
				}
				break;
			case TRANSFORM:
				enterOuterAlt(_localctx, 17);
				{
				setState(162);
				match(TRANSFORM);
				setState(163);
				data();
				setState(164);
				match(WITH);
				setState(165);
				function();
				}
				break;
			case SORT:
				enterOuterAlt(_localctx, 18);
				{
				setState(167);
				match(SORT);
				setState(168);
				data();
				setState(169);
				match(BY);
				setState(170);
				key();
				}
				break;
			case AGGREGATE:
				enterOuterAlt(_localctx, 19);
				{
				setState(172);
				match(AGGREGATE);
				setState(173);
				data();
				setState(174);
				match(USING);
				setState(175);
				function();
				}
				break;
			case NOTIFY:
				enterOuterAlt(_localctx, 20);
				{
				setState(177);
				match(NOTIFY);
				setState(178);
				recipient();
				}
				break;
			case LOG:
				enterOuterAlt(_localctx, 21);
				{
				setState(179);
				match(LOG);
				setState(180);
				message();
				}
				break;
			case CURRENT_TIME:
				enterOuterAlt(_localctx, 22);
				{
				setState(181);
				match(CURRENT_TIME);
				}
				break;
			case QUERY_API:
				enterOuterAlt(_localctx, 23);
				{
				setState(182);
				match(QUERY_API);
				setState(183);
				url();
				}
				break;
			case EMAIL:
				enterOuterAlt(_localctx, 24);
				{
				setState(184);
				match(EMAIL);
				setState(185);
				sender();
				setState(186);
				recipient();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(AgentPP_ANTLR4GrammarParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(AgentPP_ANTLR4GrammarParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(AgentPP_ANTLR4GrammarParser.COLON, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AgentPP_ANTLR4GrammarParser.ELSE, 0); }
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(IF);
			setState(191);
			condition();
			setState(192);
			match(COLON);
			setState(193);
			block();
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(194);
				match(ELSE);
				setState(195);
				match(COLON);
				setState(196);
				block();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopStmtContext extends ParserRuleContext {
		public TerminalNode LOOP() { return getToken(AgentPP_ANTLR4GrammarParser.LOOP, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode UNTIL() { return getToken(AgentPP_ANTLR4GrammarParser.UNTIL, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public LoopStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterLoopStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitLoopStmt(this);
		}
	}

	public final LoopStmtContext loopStmt() throws RecognitionException {
		LoopStmtContext _localctx = new LoopStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_loopStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(LOOP);
			setState(200);
			block();
			setState(201);
			match(UNTIL);
			setState(202);
			condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(AgentPP_ANTLR4GrammarParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentPP_ANTLR4GrammarListener ) ((AgentPP_ANTLR4GrammarListener)listener).exitAssignment(this);
		}
	}
